base/nextcloud-deployment/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:    
      containers:
        - name: nextcloud
          image: nextcloud:29.0.7
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/bash", "-c", "apt update && apt install -y default-mysql-client" ]
          volumeMounts:
            - mountPath: /docker-entrypoint-hooks.d/before-starting/config.sh
              name: nextcloud-config-sh
              subPath: config.sh
            - mountPath: /var/www/html
              name: nextcloud-data
              subPath: nextcloud
            - mountPath: /var/www/html/data
              name: nextcloud-data
              subPath: data
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-data
              subPath: custom_apps
            - mountPath: /var/www/html/apps
              name: nextcloud-data
              subPath: apps
          ports:
            - containerPort: 80
      volumes:
        - name: nextcloud-config-sh
          configMap:
            name: nextcloud-config-sh
            items:
              - key: config.sh
                path: config.sh
            defaultMode: 0755
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-pvc
