base/nextcloud-deployment/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: nextcloud
  type: ClusterIP
