base/nextcloud-deployment/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/client-max-buffer-size: 500m
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy_buffering: 'false'
    nginx.ingress.kubernetes.io/server-snippet: |-
     location = /.well-known/carddav {
        return 301 $scheme://$host/remote.php/dav;
      }
     location = /.well-known/caldav {
        return 301 $scheme://$host/remote.php/dav;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: nextcloud.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-service
            port:
              name: http
  tls:
  - hosts:
      - nextcloud.example.com
    secretName: secret-nextcloud-tls
